    - Print track name(s)
    - Many other readability improvements to tablature printing
    - Better printing of time signature changes
    - Connect grand staffs toghether (extend measure bars)
    - Collapse long series of empty measures into a gathered rest
    - Allowing configuring whether empty tracks are hidden
    - Misc tweaks and fixes
    - Prevent invoking print dialog when it's already visible, which caused crashes
- Adding and removing tracks no more confuse the undo system
- The "undo" menu is now chattier about what is next to undo
- Fixed bug with key selection (when going back to C)
- Code cleanup and general improvements/fixes
- Improved dialog shown when quitting and there are unsaved changes (now offer to save them)
- Started adding support for custom keys (hidden for now)

1.2b9
- Printing Improvements
    - Symbols are now given an absolute minimum size, which fixes several printing glitches
    - Better vertical space allocation, so now tracks will no more overlap vertically
    - Various other improvements, fixes and tweaks
    - Intensive code cleanup and documentation
- Each tab now has its own close button
- More code cleanup

1.2b8
- You can now choose between two tools : the "classic" on from older versions, and a new one that adds without dragging
- More printing improvements
- Clicking on a note on the piano at the left of the keyboard editor now plays the note
- Clicking on a note on the staff at the left of the score editor now plays the note
- Clicking on an entry in the table at the left of the drum editor now plays the sound
- Fixed crash when collapsing last drum section

1.2b7
- fixed bug when loading file that used a magnetic grid size from drop-down menu and not visible on the widget
- fixed drawing dead notes (X)
- improved print layout
- improved look of printed note heads
- improved look of printed tabs
- improved printing of triplets and ties
- printing is now non-linear