@@ -27,8 +27,9 @@
     - Connect grand staffs toghether (extend measure bars)<br/>
     - Collapse long series of empty measures into a gathered rest<br/>
     - Allowing configuring whether empty tracks are hidden<br/>
-    - Misc tweaks and fixes<br/>
     - Prevent invoking print dialog when it's already visible, which caused crashes<br/>
+    - Don't add a time sig change alone at the end of a line.<br/>
+    - Misc tweaks and fixes<br/>
 </blockquote>
 - Adding and removing tracks no more confuse the undo system<br/>
 - The "undo" menu is now chattier about what is next to undo<br/>
